minor change on demo

--- a/demo.html
+++ b/demo.html
@@ -2,7 +2,7 @@
 <html ng-app="MyApp" ng-controller="GlobalController as g">
 <head>
   <title>ngAutoComplete DEMO page.</title>
-  <link href="http://cdn.bootcss.com/bootstrap/3.3.5/css/bootstrap.min.css" rel="stylesheet">
+  <link href="//cdn.bootcss.com/bootstrap/3.3.5/css/bootstrap.min.css" rel="stylesheet">
   <link href="ngAutoComplete.css" rel="stylesheet">
 </head>
 <body>
@@ -25,9 +25,9 @@
         </div>
       </div>
     </div>
-    <script src="http://cdn.bootcss.com/angular.js/1.4.7/angular.min.js"></script>
-    <script src="http://cdn.bootcss.com/jquery/2.1.4/jquery.min.js"></script>
-    <script src="http://cdn.bootcss.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
+    <script src="//cdn.bootcss.com/angular.js/1.4.7/angular.min.js"></script>
+    <script src="//cdn.bootcss.com/jquery/2.1.4/jquery.min.js"></script>
+    <script src="//cdn.bootcss.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
     <script src="ngAutoComplete.js"></script>
     <script>
         angular.module('MyApp', ['ngAutoComplete'])
