--- a/demo.html
+++ b/demo.html
@@ -9,19 +9,35 @@
     <div class="container">
       <div class="row">
         <div class="col-md-12">
-          <h3>clean-on-blur=true</h3>
+          <pre class="text-info" style="margin:10px auto">
+clean-on-blur="true"
+ng-model="inputOne"
+nac-data="dataOne"
+nac-formatter="fnFormatter"
+nac-parser="fnParser"
+clean-on-blur="true"
+onchange="onchange"</pre>
           <div ng-auto-complete
-               ng-model="test"
-               nac-data="data"
+               ng-model="inputOne"
+               nac-data="dataOne"
                nac-formatter="fnFormatter"
                nac-parser="fnParser"
                clean-on-blur="true"
                onchange="onchange"></div>
-          <h3>clean-on-blur=false</h3>
+          <div class="btn btn-info" ng-click="inputOne='ok one'" style="margin-top:10px">修改 inputOne</div>
+          <pre class="text-warning" style="margin:10px auto">
+clean-on-blur="false"
+ng-model="inputOne"
+nac-data="dataOne"
+nac-formatter="fnFormatter"
+nac-parser="fnParser"
+clean-on-blur="true"
+onchange="onchange"</pre>
           <div ng-auto-complete
-               ng-model="test2"
-               nac-data="data2"
+               ng-model="inputTwo"
+               nac-data="dataTwo"
                onchange="onchange"></div>
+          <div class="btn btn-warning" ng-click="inputTwo='ok for input two'" style="margin-top:10px">修改 inputTwo</div>
         </div>
       </div>
     </div>
@@ -35,8 +51,14 @@
           $sceProvider.enabled(false);
         })
         .controller('GlobalController', function ($scope, $timeout) {
-          $scope.data = [{text: 'bootcss', id:1}, {text:'angular',id:2}, {text:'dragular',id:3}, {text:'test',id:4}, {text:'tommy',id:5}, {text:'wtf',id:6}];
-          $scope.data2 = ['1','2asdf','333123'];
+          var STR = 'tommy is so handsome that I can\'t control myself!';
+          $scope.dataOne = STR.split(' ').map(function (item) {
+            return {
+              id: +new Date,
+              text: item
+            };
+          });
+          $scope.dataTwo = STR.split(' ');
           $scope.onchange = function (item) {
             console.log(item);
           };
