--- a/demo.html
+++ b/demo.html
@@ -48,7 +48,7 @@ clean-on-blur="true"</pre>
           $sceProvider.enabled(false);
         })
         .controller('GlobalController', function ($scope, $timeout) {
-          var STR = 'tommy is so handsome that I can\'t control myself!';
+          var STR = 'tommy is so handsome that I can\'t control myself(a)! hey jude dont make it bad sing a sad song won\'t make it better';
           $scope.dataOne = STR.split(' ').map(function (item) {
             return {
               id: Math.random(),
