fix filter result

--- a/demo.html
+++ b/demo.html
@@ -72,7 +72,7 @@ clean-on-blur="true"</pre>
             };
 
             $scope.fnFormatter = function(item) {
-                return item.text;
+                return item.text + 'thisIsATest';
             };
 
             $scope.fnParser = function(item) {
